# AWS-job-posting-analysis

./: .gitignore  README.md  all.py  analysis.ipynb  comprehend_keywords.py  newly_added_history.md  postings.ipynb  pyproject.toml  requirements.in  script.py
analysis/: README.md  basic_analysis.ipynb  comprehend_keywords.py  matched_titlewords_taxonomy_statistics.ipynb
methods/: __init__.py  actions.py  attributes.py  configs.py  constants.py  datastruct_utils.py  files_io.py  init.py  macros.py  outputs.py  postings_utils.py  scrape.py  scrapefunctions.py  sites.py  transformations.py  urls.py
methods/io/: files_io.py  generate_profile_outputs.py  outputs_excel.py
methods/pipelines/: store_universal.py
methods/processing/: derive_profile_postings.py
methods/scrapers/: site_scrapers_plan.md  sites.py
schedule/: datacollect.py  regexes.py  tech_collect.py  tech_filter.py
source/htmls/: KarriereAT_Data.txt  KarriereAT_ML.txt  WienerStadtwerke_Data.txt
source/htmls/manual/: KarriereAT_AI.txt
source/save/: karriere.at_2025-01-12.json  postings_2024-12-17.json
source/save/companies/: karriere.at_companies_1.json
source/save/postings/: karriere.at_2025-01-09.json
src/jobscraping/: __init__.py  urls.py
src/jobscraping/config/: __init__.py  configs.py  constants.py
src/jobscraping/io/: __init__.py  files_io.py  generate_profile_outputs.py  outputs.py  outputs_excel.py
src/jobscraping/pipelines/: collecting.py  pipeline.py  scrape_universal.py  store_universal.py
src/jobscraping/processing/: __init__.py  derive_profile_postings.py  (+2 more)
(+11 files in other folders)
